# moveit_check

./: CMakeLists.txt  package.xml  readme
launch/: baxter_base_trans.launch  baxter_joint_trajec.launch  object_position_server.launch
msg/: colorPos2d.msg  color_pos_2d_array.msg  object_position.msg  object_position_list.msg
src/: GoogleSpeechToText.py  base_scan_coords.py  base_scan_transform.py  marker_check.py  object_position_publisher.py  object_position_right_hand_server.py  object_position_server.py  object_position_server_color.py  sequence_builder.py  sequence_builder_color_list.py  test_moveit (copy).py  test_moveit_table_top_assemble_scenario.py  test_moveit_tea_sandwich_scenario.py  transform_frames.py
srv/: object_position_ar_tag.srv  object_position_ar_tag_hand.srv  object_position_ar_tag_list.srv  object_position_color.srv
